# batch_forge

./: .gitignore  Cargo.toml  README.md
docs/: benchmarks.md  correctness.md
python/: export_eqx.py  requirements.txt
src/: loader.rs  main.rs  metal_backend.rs  tensor.rs
src/kv_cache/: mod.rs
src/shaders/: compute.metal
