[package]
name = "batch_forge"
version = "0.1.0"
edition = "2021"
description = "High-performance inference engine for JAX/Equinox models in Rust"

[dependencies]
safetensors = "0.4"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.28"
